--- a/estilos.css
+++ b/estilos.css
@@ -104,7 +104,7 @@ body {
     min-height: auto;
     padding-top: 1rem;
   }
-  
+
   .titulo {
     font-size: 1.5rem;
     margin-bottom: 1.5rem;
@@ -115,6 +115,7 @@ body {
     width: 80%;
     padding: 2rem 1rem;
     margin: 0 2rem;
+    margin-top: 1rem;
   }
 
   #contenedor-pregunta h2 {
