--- a/pages/Style/menu.css
+++ b/pages/Style/menu.css
@@ -39,7 +39,7 @@ body {
 
 
 .boton-test {
-  background-color: #007bff;
+  background-color: #5090d4;
   color: white;
   border: none;
   padding: 1rem 2rem;
@@ -47,10 +47,11 @@ body {
   font-size: 1.2rem;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin: 0.5rem 0;
 }
 
 .boton-test:hover {
-  background-color: #0056b3;
+  background-color: #29619d;
 }
 
 @media (max-width: 480px) {
