--- a/styles/menu.css
+++ b/styles/menu.css
@@ -37,9 +37,10 @@ body {
 .titulo {
   text-align: center;
   font-size: 2rem;
+   margin-top: 10vh; 
   margin-bottom: 2rem;
   font-weight: 600;
-  color: #202b4e;
+  color: #293661;
 }
 
 .sign{
