--- a/styles/menu.css
+++ b/styles/menu.css
@@ -16,7 +16,7 @@ body {
   background: white;
   padding: 3rem 2rem;
   border-radius: 20px;
-  box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
+  box-shadow: 0px 15px 40px rgba(0,0,0,0.12), 0px 5px 15px rgba(0,0,0,0.08);
   max-width: 500px;
   width: 90%;
   text-align: center;
@@ -24,6 +24,8 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1rem; 
+   padding: 3.5rem 2.5rem;
+   border-radius: 25px; 
 }
 
 .relleno {
@@ -36,18 +38,28 @@ body {
 
 
 .titulo {
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.5rem;
    margin-top: 20vh; 
-  margin-bottom: 2rem;
-  font-weight: 600;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+  letter-spacing: 0.05em;
   color: #293661;
+   text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+.subtitulo {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #6c757d;
+    margin-bottom: 3rem; /* Espacio entre subtítulo y card */
 }
 
 .sign{
   text-align: center;
-  font-size: 0.7rem; /* Un poco más grande para ser legible, pero aún pequeño */
-  color: #9d9999; /* Un gris un poco más sólido para asegurar visibilidad mínima */
+  font-size: 0.8rem; /* Un poco más grande para ser legible, pero aún pequeño */
+  color: #ffffff; 
   opacity: 0.7; /* Hace el texto un poco transparente para que sea "poco visible" */
   
 }
@@ -60,14 +72,19 @@ body {
   border: none;
   padding: 1rem 2rem;
   border-radius: 10px;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   cursor: pointer;
   transition: background-color 0.3s;
   margin: 0.5rem 0;
+  border-radius: 12px;
+  box-shadow: 0px 5px 15px rgba(0,0,0,0.2); /* Sombra para el botón */
+  transition: all 0.3s ease;
 }
 
 .boton-test:hover {
   background-color: #436991;
+   transform: translateY(-3px); /* Pequeño levantamiento */
+   box-shadow: 0px 8px 20px rgba(0,0,0,0.3);
 }
 
 @media (max-width: 480px) {
