Modificamos CSS para acercar titulo

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,21 +1,21 @@
 body {
   background: linear-gradient(to top, #9eb0e9 0%, #ffffff 100%);
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column; /* importante para apilar verticalmente */
   align-items: center;
-  justify-content: space-between;  /* ← alinea arriba */
+  justify-content: center;  /* ← alinea arriba */
   min-height: 100vh;
   margin: 0;
-  padding-top: 2rem; /* espacio superior */
+  padding-top: 0; /* espacio superior */
   padding-bottom: 1rem;
 
 }
 
 .card {
   background: white;
-  padding: 3rem 2rem;
-  border-radius: 20px;
+  padding: 3.5rem 2.5rem;
+  border-radius: 25px;
   box-shadow: 0px 15px 40px rgba(0,0,0,0.12), 0px 5px 15px rgba(0,0,0,0.08);
   max-width: 500px;
   width: 90%;
@@ -24,8 +24,6 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1rem; 
-   padding: 3.5rem 2.5rem;
-   border-radius: 25px; 
 }
 
 .relleno {
@@ -41,8 +39,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-size: 2.5rem;
-   margin-top: 20vh; 
-  margin-bottom: 1.5rem;
+   margin-top: 0; 
+  margin-bottom: 0.5rem;
   font-weight: 700;
   letter-spacing: 0.05em;
   color: #293661;
@@ -53,7 +51,8 @@ body {
     text-align: center;
     font-size: 1.2rem;
     color: #6c757d;
-    margin-bottom: 3rem; /* Espacio entre subtítulo y card */
+    margin-bottom: 2rem; /* Espacio entre subtítulo y card */
+    padding-bottom: 0;
 }
 
 .sign{
@@ -61,7 +60,8 @@ body {
   font-size: 0.8rem; /* Un poco más grande para ser legible, pero aún pequeño */
   color: #ffffff; 
   opacity: 0.7; /* Hace el texto un poco transparente para que sea "poco visible" */
-  
+  margin-top: auto; 
+  padding-top: 1rem;
 }
 
 
@@ -74,7 +74,6 @@ body {
   border-radius: 10px;
   font-size: 1.3rem;
   cursor: pointer;
-  transition: background-color 0.3s;
   margin: 0.5rem 0;
   border-radius: 12px;
   box-shadow: 0px 5px 15px rgba(0,0,0,0.2); /* Sombra para el botón */
@@ -90,6 +89,13 @@ body {
 @media (max-width: 480px) {
   .titulo {
     font-size: 1.5rem;
+    margin-top: 0;
+    margin-bottom: 0.4rem;
+  }
+
+   .subtitulo {
+    font-size: 1rem;
+    margin-bottom: 1.5rem; /* Ajustar margen para móviles */
   }
 
    .card {
@@ -98,14 +104,16 @@ body {
   }
 
   .sign {
-    font-size: 0.6rem; /* Incluso más pequeño en móviles si lo deseas */
-    /*margin-top: 0.5rem; /* Ajustar margen para móviles */
+    font-size: 0.6rem;
+    padding-top: 0.8rem; 
+    padding-bottom: 0.5rem;
   }
 
   .boton-test {
     width: 80%;
     font-size: 1rem;
     padding: 0.8rem 1.5rem;
+     box-shadow: 0px 3px 10px rgba(0,0,0,0.1);
   }
 
 }
