--- a/styles/menu.css
+++ b/styles/menu.css
@@ -24,6 +24,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1rem; 
+  margin-top: 2rem;
 }
 
 .relleno {
@@ -39,7 +40,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-size: 2.5rem;
-   margin-top: 0; 
+  margin-top: 0.5 rem; 
   margin-bottom: 0.5rem;
   font-weight: 700;
   letter-spacing: 0.05em;
@@ -52,7 +53,7 @@ body {
     font-size: 1.2rem;
     color: #6c757d;
     margin-bottom: 2rem; /* Espacio entre subtítulo y card */
-    padding-bottom: 0;
+    padding-bottom: 0.5rem;
 }
 
 .sign{
@@ -66,15 +67,15 @@ body {
 
 
 .boton-test {
-  width: 80%;   
+  width: 90%;   
   background-color: #33457f;
   color: white;
   border: none;
-  padding: 1rem 2rem;
+  padding: 1.4rem 2.5rem;
   border-radius: 10px;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   cursor: pointer;
-  margin: 0.5rem 0;
+  margin: 0.7rem 0;
   border-radius: 12px;
   box-shadow: 0px 5px 15px rgba(0,0,0,0.2); /* Sombra para el botón */
   transition: all 0.3s ease;
@@ -89,7 +90,7 @@ body {
 @media (max-width: 480px) {
   .titulo {
     font-size: 1.5rem;
-    margin-top: 0;
+    margin-top: 0.5 rem;
     margin-bottom: 0.4rem;
   }
 
