--- a/styles/menu.css
+++ b/styles/menu.css
@@ -7,14 +7,14 @@ body {
   justify-content: center;  /* ← alinea arriba */
   min-height: 100vh;
   margin: 0;
-  padding-top: 0; /* espacio superior */
+  /*padding-top: 0.5 rem; /* espacio superior */
   padding-bottom: 1rem;
 
 }
 
 .card {
   background: white;
-  padding: 3.5rem 2.5rem;
+  padding: 2.5rem 1.7rem;
   border-radius: 25px;
   box-shadow: 0px 15px 40px rgba(0,0,0,0.12), 0px 5px 15px rgba(0,0,0,0.08);
   max-width: 500px;
@@ -24,7 +24,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1rem; 
-  margin-top: 2rem;
+  
 }
 
 .relleno {
