--- a/styles/menu.css
+++ b/styles/menu.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;  /* ← alinea arriba */
   min-height: 100vh;
   margin: 0;
-  /*padding-top: 0.5 rem; /* espacio superior */
+   padding-top: 5vh; /* espacio superior */
   padding-bottom: 1rem;
 
 }
@@ -40,7 +40,6 @@ body {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   font-size: 2.5rem;
-  margin-top: 0.5 rem; 
   margin-bottom: 0.5rem;
   font-weight: 700;
   letter-spacing: 0.05em;
