--- a/styles/menu.css
+++ b/styles/menu.css
@@ -7,8 +7,8 @@ body {
   justify-content: center;  /* ← alinea arriba */
   min-height: 100vh;
   margin: 0;
-   padding-top: 5vh; /* espacio superior */
-  padding-bottom: 1rem;
+  padding-top: 5rem; /* espacio superior */
+  padding-bottom: 2rem;
 
 }
 
@@ -44,7 +44,7 @@ body {
   font-weight: 700;
   letter-spacing: 0.05em;
   color: #293661;
-   text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 .subtitulo {
@@ -100,6 +100,8 @@ body {
 
    .card {
     padding: 2rem 1rem;
+    margin-left: 0.5 rem;
+    margin-right: 0.5 rem;
     /*margin-bottom: 1.5rem; /* Ajustar margen para móviles */
   }
 
