--- a/styles/estilo_preposition.css
+++ b/styles/estilo_preposition.css
@@ -1,18 +1,7 @@
 
-
-.titulo {
-  text-align: center;
-  font-size: 2rem;
-  margin-bottom: 2rem;
-  font-weight: 600;
-  color: #222;
-}
-
-
-
 body {
- background-color: #f5f6fa;
-  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(to top, #9df194 0%, #ffffff 100%);
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column; /* importante para apilar verticalmente */
   align-items: center;
@@ -21,6 +10,18 @@ body {
   margin: 0;
   padding-top: 2rem; /* espacio superior */
 }
+
+
+.titulo {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  font-size: 2.2rem;
+  margin-bottom: 2rem;
+  font-weight: 600;
+  color: #22491f;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
 
 .card {
   background: white;
@@ -50,8 +51,8 @@ body {
 
 
 #contenedor-pregunta h2 {
-  font-weight: normal;
   margin-bottom: 1.5rem;
+  font-weight: 300;
 }
 
 
@@ -90,7 +91,7 @@ body {
   margin-top: 2rem;
   padding: 0.7rem 1.2rem;
   border: none;
-  background-color: #007bff;
+  background-color: #1a4b1e;
   color: white;
   border-radius: 6px;
   font-size: 1rem;
