--- a/styles/menu.css
+++ b/styles/menu.css
@@ -7,14 +7,33 @@ body {
   justify-content: center;  /* ← alinea arriba */
   min-height: 100vh;
   margin: 0;
-  padding-top: 5rem; /* espacio superior */
+  padding-top: 3rem; /* espacio superior */
   padding-bottom: 2rem;
 
 }
 
+.titulo {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  font-size: 2.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #293661;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+.subtitulo {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #6c757d;
+    margin-bottom: 2rem; /* Espacio entre subtítulo y card */
+    padding-bottom: 0.5rem;
+}
+
 .card {
   background: white;
-  padding: 2.5rem 1.7rem;
+  padding: 1.5rem 1rem;
   border-radius: 25px;
   box-shadow: 0px 15px 40px rgba(0,0,0,0.12), 0px 5px 15px rgba(0,0,0,0.08);
   max-width: 500px;
@@ -36,24 +55,7 @@ body {
 
 
 
-.titulo {
-  font-family: 'Montserrat', sans-serif;
-  text-align: center;
-  font-size: 2.5rem;
-  margin-bottom: 0.5rem;
-  font-weight: 700;
-  letter-spacing: 0.05em;
-  color: #293661;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-}
 
-.subtitulo {
-    text-align: center;
-    font-size: 1.2rem;
-    color: #6c757d;
-    margin-bottom: 2rem; /* Espacio entre subtítulo y card */
-    padding-bottom: 0.5rem;
-}
 
 .sign{
   text-align: center;
@@ -89,8 +91,9 @@ body {
 @media (max-width: 480px) {
   .titulo {
     font-size: 1.5rem;
-    margin-top: 0.5 rem;
-    margin-bottom: 0.4rem;
+    margin-top: 1.5 rem;
+    padding: 0 1rem;
+    /*margin-bottom: 0.4rem;*/
   }
 
    .subtitulo {
@@ -99,9 +102,10 @@ body {
   }
 
    .card {
-    padding: 1.5rem 0.7rem;
-    margin-left: 0.5 rem;
-    margin-right: 0.5 rem;
+    width: 80%;
+    padding: 2rem 1rem;
+    margin: 0 2rem;
+    margin-top: 1rem;
     /*margin-bottom: 1.5rem; /* Ajustar margen para móviles */
   }
 
