--- a/styles/estilo_phrasal.css
+++ b/styles/estilo_phrasal.css
@@ -1,6 +1,6 @@
 
 body {
-  background: linear-gradient(to top, #447d3d 0%, #ffffff 100%);
+  background: linear-gradient(to top, #ab762d 0%, #ffffff 100%);
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column; /* importante para apilar verticalmente */
@@ -18,7 +18,7 @@ body {
   font-size: 2.2rem;
   margin-bottom: 2rem;
   font-weight: 600;
-  color: #22491f;
+  color: #71501e;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
@@ -91,7 +91,7 @@ body {
   margin-top: 2rem;
   padding: 0.7rem 1.2rem;
   border: none;
-  background-color: #1a4b1e;
+  background-color: #794813;
   color: white;
   border-radius: 6px;
   font-size: 1rem;
