--- a/styles/estilo_preposition.css
+++ b/styles/estilo_preposition.css
@@ -1,14 +1,14 @@
 
 body {
-  background: linear-gradient(to top, #447d3d 0%, #ffffff 100%);
+  background: linear-gradient(to top, #447d3dae 0%, #ffffff 100%);
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column; /* importante para apilar verticalmente */
   align-items: center;
-  justify-content: flex-start; /* ← alinea arriba */
+  justify-content: center; /* ← alinea arriba */
   min-height: 100vh;
   margin: 0;
-  padding-top: 2rem; /* espacio superior */
+  padding-top: 3rem; /* espacio superior */
   padding-bottom: 2rem;
 }
 
@@ -32,10 +32,10 @@ body {
   max-width: 500px;
   width: 90%;
   text-align: center;
-  display: flex;
+  /*display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem; 
+  gap: 1rem;*/ 
 }
 
 .barra-progreso {
@@ -45,6 +45,7 @@ body {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 2rem;
+  width: 90%;
 }
 
 .relleno {
@@ -81,6 +82,26 @@ body {
   background-color: #f0f0f0;
 }
 
+.contador { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 0.8rem;
+    z-index: 1;
+    white-space: nowrap; /* Evita que el texto se rompa */
+}
+
+#contenedor-pregunta {
+    width: 100%; /* Asegura que el contenedor de la pregunta ocupe todo el ancho de la card */
+}
+
+#contenedor-pregunta h2 {
+  margin-bottom: 1.5rem;
+  font-weight: 300;
+  padding: 0 0.5rem; /* Pequeño padding para el texto de la pregunta */
+}
 
 .correcta {
   background-color: #d4edda !important;
@@ -138,7 +159,7 @@ body {
 
   .barra-progreso {
      max-width: none;
-     width: 95%;
+     width: 100%;
     margin: 0 auto 1.5rem auto;
     border-radius: 10px;
   }
