--- a/styles/estilo_preposition.css
+++ b/styles/estilo_preposition.css
@@ -1,6 +1,6 @@
 
 body {
-  background: linear-gradient(to top, #447d3dae 0%, #ffffff 100%);
+  background-color: #bdeab7ae;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column; /* importante para apilar verticalmente */
@@ -32,10 +32,10 @@ body {
   max-width: 500px;
   width: 90%;
   text-align: center;
-  /*display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;*/ 
+  gap: 0.7rem;
 }
 
 .barra-progreso {
