--- a/styles/estilo_phrasal.css
+++ b/styles/estilo_phrasal.css
@@ -1,14 +1,15 @@
 
 body {
-  background: linear-gradient(to top, #ab762d 0%, #ffffff 100%);
+  background-color: #dad18bbb;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column; /* importante para apilar verticalmente */
   align-items: center;
-  justify-content: flex-start; /* ← alinea arriba */
+  justify-content: center; /* ← alinea arriba */
   min-height: 100vh;
   margin: 0;
-  padding-top: 2rem; /* espacio superior */
+  padding-top: 3rem; /* espacio superior */
+  padding-bottom: 2rem;
 }
 
 
@@ -18,7 +19,7 @@ body {
   font-size: 2.2rem;
   margin-bottom: 2rem;
   font-weight: 600;
-  color: #71501e;
+  color: #9f8f40;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
@@ -31,6 +32,10 @@ body {
   max-width: 500px;
   width: 90%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.7rem;
 }
 
 .barra-progreso {
@@ -40,6 +45,7 @@ body {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 2rem;
+  width: 90%;
 }
 
 .relleno {
@@ -76,6 +82,26 @@ body {
   background-color: #f0f0f0;
 }
 
+.contador { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 0.8rem;
+    z-index: 1;
+    white-space: nowrap; /* Evita que el texto se rompa */
+}
+
+#contenedor-pregunta {
+    width: 100%; /* Asegura que el contenedor de la pregunta ocupe todo el ancho de la card */
+}
+
+#contenedor-pregunta h2 {
+  margin-bottom: 1.5rem;
+  font-weight: 300;
+  padding: 0 0.5rem; /* Pequeño padding para el texto de la pregunta */
+}
 
 .correcta {
   background-color: #d4edda !important;
@@ -91,7 +117,7 @@ body {
   margin-top: 2rem;
   padding: 0.7rem 1.2rem;
   border: none;
-  background-color: #794813;
+  background-color: #9b963b;
   color: white;
   border-radius: 6px;
   font-size: 1rem;
@@ -103,7 +129,6 @@ body {
 /* Estilos adaptativos para móviles */
 @media (max-width: 600px) {
     body {
-    justify-content: flex-start;
     min-height: auto;
     padding-top: 1rem;
   }
@@ -133,9 +158,10 @@ body {
   }
 
   .barra-progreso {
-     max-width: 90%;
-  margin: 0 auto 1.5rem auto;
-  border-radius: 10px;
+     max-width: none;
+     width: 100%;
+    margin: 0 auto 1.5rem auto;
+    border-radius: 10px;
   }
 
   #siguiente {
