--- a/styles/estilo_phrasal.css
+++ b/styles/estilo_phrasal.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #dad18bbb;
+  background-color: #e1ddbbbb;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column; /* importante para apilar verticalmente */
@@ -57,8 +57,9 @@ body {
 
 
 #contenedor-pregunta h2 {
-  margin-bottom: 1.5rem;
-  font-weight: 300;
+   margin-bottom: 1.5rem;
+  font-weight: 500;
+   padding: 0 0.5rem;
 }
 
 
